<resources>
    <string name="app_name">MontyHall3doors</string>
    <string name="tv_main_question1">3개의 문중 2개의 문 뒤에는 염소가 1개의 문 뒤에는 당신이 원하는 자동차가 있습니다. 3개의 문중 어떤 문 뒤에 자동자가 있을지 선택 후 Next 버튼을 눌러 주세요. 자동 실행을 원한다면 상단의 의 자동 실행 버튼을 눌러 주세요.</string>
    <string name="tv_main_question2">선택하지 않은 두개의 문 중에 하나를 열었습니다. 당신은 선택을 번복할 수 있습니다. 결정을 내린 후 Next 버튼을 눌러 주세요.  </string>
    <string name="tv_main_question3">한번더 하고 싶다면 다시하기 버튼을 다른 사람들의 결과도 보고 싶다면 결과보기 버튼을 눌러 주세요.</string>
    <string name="btn_main_next">Next</string>
    <string name="btn_main_restart">다시하기</string>
    <string name="btn_main_view_results">결과보기</string>
    <string name="btn_main_auto_play">자동실행</string>
    <string name="tv_main_auto_play_hint">자동 실행할 횟수를 입력해 주세요.</string>
    <string name="tv_main_auto_play">두번째 질문에서 선택 번복을 원한다면 \'번복\' 아니라면 \'미번복\' 버튼을 눌러주세요.</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>
    <string name="admob_app_id">ca-app-pub-1783551398738099~2575091672</string>
    <string name="banner_ad_unit_id">ca-app-pub-1783551398738099/6298714260</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>


</resources>
